--- a/CRM/pom.xml
+++ b/CRM/pom.xml
@@ -16,6 +16,8 @@
         <spring-security.version>3.2.5.RELEASE</spring-security.version>
         <hibernate.version>4.3.0.Final</hibernate.version>
         <project.encoding>UTF-8</project.encoding>
+        <mockito.version>1.10.19</mockito.version>
+        <junit.version>4.11</junit.version>
     </properties>
 
     <dependencies>
@@ -130,6 +132,24 @@
             <version>1.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>com.lowagie</groupId>-->
             <!--<artifactId>itext</artifactId>-->
